@@ -22,6 +22,7 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
+require_once($GLOBALS['PATH_community'] . 'classes/class.tx_community_applicationmanager.php');
 require_once($GLOBALS['PATH_community'] . 'classes/class.tx_community_localizationmanager.php');
 require_once($GLOBALS['PATH_community'] . 'interfaces/interface.tx_community_communityapplicationwidget.php');
 require_once($GLOBALS['PATH_community'] . 'interfaces/interface.tx_community_command.php');
@@ -83,9 +84,10 @@ class tx_community_controller_userprofile_ProfileActionsWidget implements tx_com
 	}
 
 	/**
-	 * returns the widget's ID, this is the ID which is used while register the widget in the ext_localconf.php
+	 * returns the widget's Id, this is the ID which is used while the widget
+	 * gets registerd in ext_localconf.php
 	 *
-	 * @return	string	the widget's CSS class
+	 * @return	string	the widget's Id
 	 */
 	public function getId() {
 		return 'profileActions';
@@ -118,8 +120,40 @@ class tx_community_controller_userprofile_ProfileActionsWidget implements tx_com
 		return '';
 	}
 
+	/**
+	 * central excution method of this widget, acts as a dispatcher for the
+	 * different actions
+	 *
+	 * @return	string	the result of the called action, usually some form of output/rendered HTML
+	 */
 	public function execute() {
-		return $this->indexAction();
+		$content = '';
+		$communityRequest = t3lib_div::_GP('tx_community');
+
+		$applicationManagerClass = t3lib_div::makeInstanceClassName('tx_community_ApplicationManager');
+		$applicationManager      = call_user_func(array($applicationManagerClass, 'getInstance'));
+		/* @var $applicationManager tx_community_ApplicationManager */
+
+		$widgetConfiguration = $applicationManager->getWidgetConfiguration(
+			$this->communityApplication->getName(),
+			$this->getId()
+		);
+
+			// dispatch
+		if (!empty($communityRequest['profileAction'])
+			&& method_exists($this, $communityRequest['profileAction'] . 'Action')
+			&& in_array($communityRequest['profileAction'], $widgetConfiguration['actions'])
+		) {
+				// call a requested action
+			$actionName = $communityRequest['profileAction'] . 'Action';
+			$content = $this->$actionName();
+		} else {
+				// call the default action
+			$defaultActionName = $widgetConfiguration['defaultAction'] . 'Action';
+			$content = $this->$defaultActionName();
+		}
+
+		return $content;
 	}
 
 	public function indexAction() {
@@ -133,7 +167,37 @@ class tx_community_controller_userprofile_ProfileActionsWidget implements tx_com
 	}
 
 	protected function addAsFriendAction() {
+		$res = $GLOBALS['TYPO3_DB']->exec_INSERTquery(
+			'tx_community_friend',
+			array(
+				'pid'    => $this->configuration['pages.']['aclStorage'],
+				'tstamp' => $_SERVER['REQUEST_TIME'],
+				'crdate' => $_SERVER['REQUEST_TIME'],
+				'feuser' => $this->communityApplication->getRequestedUser()->getUid(),
+				'friend' => $this->communityApplication->getRequestingUser()->getUid(),
+				'role'   => $this->configuration['applications.']['userProfile.']['widgets.']['profileActions.']['addAsFriendDefaultRoleId']
+			)
+		);
 
+		if ($GLOBALS['TYPO3_DB']->sql_affected_rows($res)) {
+			// do a redirect to the profile page, no output
+
+			$profilePageUrl = $this->communityApplication->pi_getPageLink(
+				$this->configuration['pages.']['userProfile'],
+				'',
+				array(
+					'tx_community' => array(
+						'user' => $this->communityApplication->getRequestedUser()->getUid()
+					)
+				)
+			);
+
+			Header('HTTP/1.1 301 Moved Permanently');
+			Header('Location: ' . t3lib_div::locationHeaderUrl($profilePageUrl));
+			exit;
+		} else {
+			// TODO throw some exception
+		}
 	}
 
 	protected function getProfileActions() {
@@ -165,13 +229,21 @@ class tx_community_controller_userprofile_ProfileActionsWidget implements tx_com
 				$requestedUser->getAccount()->getFirstName()
 			);
 		} else {
-				// the users are not friends yet
-			$content = sprintf(
+				// the users are not friends yet, create a link
+			$linkText = sprintf(
 				$localizationManager->getLL('action.addAsFriend'),
 				$requestedUser->getAccount()->getFirstName()
 			);
 
-			// TODO add the link to actually add the user as a friend
+			$content = $this->communityApplication->pi_linkTP(
+				$linkText,
+				array(
+					'tx_community' => array(
+						'user' => $requestedUser->getUid(),
+						'profileAction' => 'addAsFriend'
+					)
+				)
+			);
 		}
 
 		return $content;
