@@ -13,6 +13,7 @@
 	* added skeleton for the privacy management application
 	* completed the user account model
 	* added a user profile actions widget
+	* added a "Add as Friend" profile action to the user profile actions widget
 
 2008-08-29 Ingo Renner  <ingo@typo3.org>
 
